--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,4 +55,15 @@ markers =[
     ]
 
 [tool.mypy]
-ignore_missing_imports = true
+ignore_missing_imports = false
+disallow_untyped_defs = true
+disallow_any_unimported = true
+check_untyped_defs = true
+no_implicit_optional = true
+warn_unused_configs = true
+warn_unused_ignores = true
+warn_redundant_casts = true
+
+
+show_error_codes = true
+pretty = false
