--- a/.github/workflows/build-and-test-arm32v7.yml
+++ b/.github/workflows/build-and-test-arm32v7.yml
@@ -1,9 +1,9 @@
 name: build-and-test-wheels-arm32
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+  #   branches: [master]
+  # pull_request:
+  #   branches: [master]
 jobs:
   linux-build-arm32v7:
     name: Build arm32 wheel
@@ -26,7 +26,7 @@ jobs:
           script: ./.github/build_scripts/build_package.sh
           platform: manylinux_2_24_armv7l
           makefile: arm_v7_linux.mk
-          python: /usr/local/bin/python3
+          python: /usr/local/bin/python3.8
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -61,7 +61,7 @@ jobs:
           docker run --platform linux/arm/v7 --rm --interactive -v $PWD/tests:/tests \
             -v $PWD/pyproject.toml:/pyproject.toml \
             -v $PWD/wheelhouse:/wheelhouse \
-            "arm32v7/python:${{ matrix.python-version }}-buster" /bin/bash -s <<EOF
+            "arm32v7/python:${{ matrix.python-version }}-bookworm" /bin/bash -s <<EOF
           python -m pip install pytest pytest-asyncio $(ls wheelhouse/*manylinux_2_24_armv7l.whl)
           python -m pytest tests/ -m "server or util or client or mainloop or partner"
           EOF
