--- a/.github/workflows/build-and-test-arm64.yml
+++ b/.github/workflows/build-and-test-arm64.yml
@@ -1,9 +1,9 @@
 name: build-and-test-wheels-arm64
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+  #   branches: [master]
+  # pull_request:
+  #   branches: [master]
 jobs:
   linux-build-aarch64:
     name: Build wheel for linux arm64
@@ -61,7 +61,7 @@ jobs:
           docker run --rm --interactive -v $PWD/tests:/tests \
             -v $PWD/pyproject.toml:/pyproject.toml \
             -v $PWD/wheelhouse:/wheelhouse \
-            "arm64v8/python:${{ matrix.python-version }}-buster" /bin/bash -s <<EOF
+            "arm64v8/python:${{ matrix.python-version }}-bookworm" /bin/bash -s <<EOF
           python3 -m pip install $(ls wheelhouse/*_aarch64.whl)
           python3 -m pip install pytest pytest-asyncio
           python -m pytest tests/ -m "server or util or client or mainloop or partner"
