--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,9 +1,9 @@
 name: build-and-test-wheels
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+  #   branches: [master]
+  # pull_request:
+  #   branches: [master]
 jobs:
   linux-build-86_64:
     name: Build wheel for linux x86_64
@@ -44,7 +44,7 @@ jobs:
         run: |
           mkdir -p snap7/lib/
           Copy-Item .\snap7-full-1.4.2\release\Windows\Win64\snap7.dll .\snap7\lib
-          python3 -m build . --wheel -C="--build-option=--plat-name=win_amd64"
+          python3 -m build . --wheel -C="--plat-name=win_amd64"
           mkdir -p wheelhouse/${{ runner.os }}/
           cp dist/*.whl wheelhouse/${{ runner.os }}/
 
@@ -78,7 +78,7 @@ jobs:
 
       - name: Build wheel
         run: |
-          python3 -m build . --wheel -C="--build-option=--plat-name=macosx_10_9_universal2"
+          python3 -m build . --wheel -C="--plat-name=macosx_10_9_universal2"
           mkdir -p wheelhouse/${{ runner.os }}/
           cp dist/*.whl wheelhouse/${{ runner.os }}/
 
@@ -96,7 +96,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-11]
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     steps:
       - name: Checkout
@@ -110,7 +110,7 @@ jobs:
       - name: Install pytest
         run: |
           python3 -m pip install --upgrade pip
-          python3 -m pip install pytest pytest-asyncio
+          python3 -m pip install pytest pytest-asyncio setuptools
 
       - name: Download artifacts
         uses: actions/download-artifact@v3
