--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,15 +1,15 @@
 name: Linux Test all Pythons
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+  #   branches: [master]
+  # pull_request:
+  #   branches: [master]
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -22,7 +22,7 @@ jobs:
           sudo apt-get install -y libsnap7-dev libsnap7-1
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
