--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,9 +1,9 @@
 name: pre-commit
 on:
     push:
-      branches: [master]
-    pull_request:
-      branches: [master]
+    #   branches: [master]
+    # pull_request:
+    #   branches: [master]
 jobs:
   pre-commit:
     runs-on: ubuntu-latest
