--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -1,9 +1,9 @@
 name: Mypy
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+  #   branches: [master]
+  # pull_request:
+  #   branches: [master]
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -14,5 +14,6 @@ jobs:
         run: |
           sudo apt-get update -qq
           sudo apt-get install -y python3-pip
+          python3 -m pip install --upgrade setuptools
       - name: Run mypy
         run: make mypy
